--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 <!DOCTYPE html>
 
-<html></html>
+<html>
+
+    <head>
+
+        <meta charset="UTF-8">
+        <title>GTAVRS Dashboard</title>
+        <link rel="icon" href="images/icon.jpg">
+        <link rel="stylesheet" href="stylesheet.css">
+
+    </head>
+
+    <body></body>
+</html>
