--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
 
     </head>
 
-    <body></body>
+    <header>
+        <a href="discord.gg/ampXhzA" class="contact" target="_blank">Discord</a>
+        <a href="support/contact.html" class="contact" target="_self">Contact Us</a>
+    </header>
+    <body>
+
+    </body>
 </html>
