--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <header>
-        <a href="discord.gg/ampXhzA" class="contact" target="_blank">Discord</a>
+        <a href="discord.gg/ampXhzA" class="discord" target="_blank">Discord</a>
         <a href="support/contact.html" class="contact" target="_self">Contact Us</a>
     </header>
     <body>
