--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
 
 
-
-
+        <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
         <script src="bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/detect.min.js"></script>
         <script src="js/detector.js"></script>
