--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GTA 5 Recovery Service</title>
     <link href="../css/custom.min.css" rel="stylesheet"> <!-- Bootstrap 5 custom sass file (compiled)-->
+    <link href="images/icon.png" rel="icon">
 </head>
 <body>
-    <%- include ('partials/navbar') %>
+    bro
 </body>
 </html>
