--- a/contact/index.html
+++ b/contact/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GTA 5 Recovery Service</title>
-        <link href="./css/custom.min.css" rel="stylesheet">
+        <link href="../css/custom.min.css" rel="stylesheet">
         <!-- Bootstrap 5 custom sass file (compiled)-->
-        <link href="images/icon.png" rel="icon">
+        <link href="../images/icon.png" rel="icon">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/index">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact">Contact Us</a>
