--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,9 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="/">
+                    <img src="/images/icon.png" alt="GTA V Recovery Service">
+                </a>
                 <button
                     class="navbar-toggler"
                     type="button"
