--- a/contact/index.html
+++ b/contact/index.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GTA 5 Recovery Service</title>
-        <link href="../css/custom.min.css" rel="stylesheet">
-        <!-- Bootstrap 5 custom sass file (compiled)-->
-        <link href="../images/icon.png" rel="icon">
+        <link href="/css/custom.min.css" rel="stylesheet"> <!-- Bootstrap 5 custom sass file (compiled)-->
+        <link href="/css/stylesheet.css" rel="stylesheet">
+        <link href="/images/icon.png" rel="icon">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <img src="/images/icon.png" alt="GTA V Recovery Service">
+                    <img src="/images/icon.png" class="icon" alt="GTA V Recovery Service">
                 </a>
                 <button
                     class="navbar-toggler"
