--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
         <link href="/css/custom.min.css" rel="stylesheet"> <!-- Bootstrap 5 custom sass file (compiled)-->
         <link href="/css/stylesheet.css" rel="stylesheet">
         <link href="/images/icon.png" rel="icon">
-
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                        <img src="/images/icon.png" class="icons" alt="GTA V Recovery Service">
+                    <img src="/images/icon.png" class="icon" alt="GTA V Recovery Service">
                 </a>
                 <button
                     class="navbar-toggler"
