--- a/contact/index.html
+++ b/contact/index.html
@@ -80,5 +80,9 @@
                 </div>
             </div>
         </nav>
+
+        <h2>
+            Need to contact us?
+        </h2>
     </body>
 </html>
