--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>GTA 5 Recovery Service</title>
         <link href="/css/custom.min.css" rel="stylesheet"> <!-- Bootstrap 5 custom sass file (compiled)-->
         <link href="/css/stylesheet.css" rel="stylesheet">
+        <link href="/css/specific.css" rel="stylesheet">
         <link href="/images/icon.png" rel="icon">
     </head>
     <body>
