Cented DIV, added img

--- a/contact/index.html
+++ b/contact/index.html
@@ -67,15 +67,18 @@
     </h2>
 
     <div>
-        <div class="contact-grid">
+        <div class="contact-grid center">
             <div>
                 <div class="contact-option">
+                    <img class="contact-img" src="...">
                     <h5 class="contact-title">Via Email</h5>
                 </div>
                 <div class="contact-option">
+                    <img class="contact-img" src="...">
                     <h5 class="contact-title">Via Discord</h5>
                 </div>
                 <div class="contact-option">
+                    <img class="contact-img" src="...">
                     <h5 class="contact-title">Via Form</h5>
                 </div>
             </div>
