--- a/contact/index.html
+++ b/contact/index.html
@@ -70,7 +70,7 @@
         <div class="contact-grid center">
             <div>
                 <div class="contact-option">
-                    <img class="contact-img" src="/images/envelope.svg">
+                    <img class="contact-img" src="/images/email-icon.png" alt="Email">
                     <h5 class="contact-title">Via Email</h5>
                 </div>
                 <div class="contact-option">
