--- a/contact/index.html
+++ b/contact/index.html
@@ -68,7 +68,7 @@
 
     <div>
         <div class="contact-grid center">
-            <div>
+            <div style="width: 500px;">
                 <div class="contact-option">
                     <img class="contact-img" src="/images/email-icon.png" alt="Email">
                     <h5 class="contact-title">Via Email</h5>
