--- a/contact/index.html
+++ b/contact/index.html
@@ -74,11 +74,11 @@
                     <h5 class="contact-title">Via Email</h5>
                 </div>
                 <div class="contact-option">
-                    <img class="contact-img" src="...">
+                    <img class="contact-img" src="/images/discord.png" alt="Discord">
                     <h5 class="contact-title">Via Discord</h5>
                 </div>
                 <div class="contact-option">
-                    <img class="contact-img" src="...">
+                    <img class="contact-img" src="/images/form.png" alt="Form">
                     <h5 class="contact-title">Via Form</h5>
                 </div>
             </div>
