--- a/contact/index.html
+++ b/contact/index.html
@@ -69,10 +69,10 @@
     <div>
         <div class="contact-grid center">
             <div style="width: 500px;">
-                <div class="contact-option">
+                <button class="contact-option">
                     <img class="contact-img" src="/images/email-icon.png" alt="Email">
                     <h5 class="contact-title">Via Email</h5>
-                </div>
+                </button>
                 <div class="contact-option">
                     <img class="contact-img" src="/images/discord.png" alt="Discord">
                     <h5 class="contact-title">Via Discord</h5>
