--- a/contact/index.html
+++ b/contact/index.html
@@ -73,14 +73,14 @@
                     <img class="contact-img" src="/images/email-icon.png" alt="Email">
                     <h5 class="contact-title">Via Email</h5>
                 </button>
-                <div class="contact-option">
+                <button class="contact-option">
                     <img class="contact-img" src="/images/discord.png" alt="Discord">
                     <h5 class="contact-title">Via Discord</h5>
-                </div>
-                <div class="contact-option">
+                </button>
+                <button class="contact-option">
                     <img class="contact-img" src="/images/form.png" alt="Form">
                     <h5 class="contact-title">Via Form</h5>
-                </div>
+                </button>
             </div>
         </div>
     </div>
