--- a/contact/index.html
+++ b/contact/index.html
@@ -1,90 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GTA 5 Recovery Service</title>
-    <link href="/css/custom.min.css" rel="stylesheet"> <!-- Bootstrap 5 custom sass file (compiled)-->
-    <link href="/css/stylesheet.css" rel="stylesheet">
-    <link href="/css/specific.css" rel="stylesheet">
-    <link href="/images/icon.png" rel="icon">
-</head>
-
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">
-                <img src="/images/icon.png" class="icon" alt="GTA V Recovery Service">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/contact">Contact Us</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li>
-                                <a class="dropdown-item" href="#">Action</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Another action</a>
-                            </li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                    </li>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>GTA 5 Recovery Service</title>
+        <link href="/css/custom.min.css" rel="stylesheet">
+        <!-- Bootstrap 5 custom sass file (compiled)-->
+        <link href="/css/stylesheet.css" rel="stylesheet">
+        <link href="/css/specific.css" rel="stylesheet">
+        <link href="/images/icon.png" rel="icon">
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">
+                    <img src="/images/icon.png" class="icon" alt="GTA V Recovery Service">
+                </a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/contact">Contact Us</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a
+                                class="nav-link dropdown-toggle"
+                                href="#"
+                                id="navbarDropdown"
+                                role="button"
+                                data-bs-toggle="dropdown"
+                                aria-expanded="false"
+                            >
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li>
+                                    <a class="dropdown-item" href="#">Action</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                </li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                class="nav-link disabled"
+                                href="#"
+                                tabindex="-1"
+                                aria-disabled="true"
+                            >Disabled</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input
+                            class="form-control me-2"
+                            type="search"
+                            placeholder="Search"
+                            aria-label="Search"
+                        >
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <h2 style="text-align: center;">
+            Need to contact us?
+        </h2>
+        <div>
+            <div class="contact-grid center">
+                <div style="width: 500px;">
+                    <button class="contact-option" id="liveToastBtn" onclick="copyEmail()">
+                        <img class="contact-img" src="/images/email-icon.png" alt="Email">
+                        <h5 class="contact-title">Via Email</h5>
+                    </button>
+                    <button class="contact-option">
+                        <img class="contact-img" src="/images/discord.png" alt="Discord">
+                        <h5 class="contact-title">Via Discord</h5>
+                    </button>
+                    <button class="contact-option">
+                        <img class="contact-img" src="/images/form.png" alt="Form">
+                        <h5 class="contact-title">Via Form</h5>
+                    </button>
+                </div>
             </div>
         </div>
-    </nav>
 
-    <h2 style="text-align: center;">
-        Need to contact us?
-    </h2>
 
-    <div>
-        <div class="contact-grid center">
-            <div style="width: 500px;">
-                <button class="contact-option">
-                    <img class="contact-img" src="/images/email-icon.png" alt="Email">
-                    <h5 class="contact-title">Via Email</h5>
-                </button>
-                <button class="contact-option">
-                    <img class="contact-img" src="/images/discord.png" alt="Discord">
-                    <h5 class="contact-title">Via Discord</h5>
-                </button>
-                <button class="contact-option">
-                    <img class="contact-img" src="/images/form.png" alt="Form">
-                    <h5 class="contact-title">Via Form</h5>
-                </button>
+        <!-- Copy notification -->
+        <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+            <div
+                id="liveToast"
+                class="toast hide"
+                role="alert"
+                aria-live="assertive"
+                aria-atomic="true"
+            >
+                <div class="toast-header">
+                    <strong class="me-auto">Notification</strong>
+                    <small>right now</small>
+                    <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="toast"
+                        aria-label="Close"
+                    ></button>
+                </div>
+                <div class="toast-body">
+                    Copied email to clipboard
+                </div>
             </div>
         </div>
-    </div>
-
-</body>
-
+    </body>
 </html>
