--- a/contact/index.html
+++ b/contact/index.html
@@ -85,10 +85,13 @@
         <h2 style="text-align: center;">
             Need to contact us?
         </h2>
+        <h3 style="text-align: center;">
+            Note: Abusing email will result in blacklist;<br>Meaning you will no longer be able to send email or send forms.    
+        </h3>
         <div>
             <div class="contact-grid center">
                 <div style="width: 500px;">
-                    <button class="contact-option" id="liveToastBtn" onclick="copyEmail()">
+                    <button type="button" class="contact-option" id="liveToastBtn" onclick="copyEmail()">
                         <img class="contact-img" src="/images/email-icon.png" alt="Email">
                         <h5 class="contact-title">Via Email</h5>
                     </button>
