--- a/contact/index.html
+++ b/contact/index.html
@@ -91,7 +91,7 @@
         <div>
             <div class="contact-grid center">
                 <div style="width: 500px;">
-                    <button type="button" class="contact-option" id="liveToastBtn" onclick="copyEmail()">
+                    <button type="button" class="contact-option" id="liveToastBtn">
                         <img class="contact-img" src="/images/email-icon.png" alt="Email">
                         <h5 class="contact-title">Via Email</h5>
                     </button>
