--- a/contact/index.html
+++ b/contact/index.html
@@ -91,7 +91,7 @@
         <div>
             <div class="contact-grid center">
                 <div style="width: 500px;">
-                    <button type="button" class="contact-option" id="liveToastBtn">
+                    <button class="contact-option" id="liveToastBtn">
                         <img class="contact-img" src="/images/email-icon.png" alt="Email">
                         <h5 class="contact-title">Via Email</h5>
                     </button>
@@ -132,5 +132,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- Bootstrap 5 JS -->
+        <script src="/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
