--- a/contact/index.html
+++ b/contact/index.html
@@ -98,11 +98,11 @@
                         <img class="contact-img" src="/images/email-icon.png" alt="Email">
                         <h5 class="contact-title" id="email">Via Email</h5>
                     </button>
-                    <button class="contact-option">
+                    <button class="contact-option" onclick="window.open('discord.gg/ampXhzA', '_blank')">
                         <img class="contact-img" src="/images/discord.png" alt="Discord">
                         <h5 class="contact-title">Via Discord</h5>
                     </button>
-                    <button class="contact-option">
+                    <button class="contact-option" onclick="alert('Sorry this option is not avaiable right now.')">
                         <img class="contact-img" src="/images/form.png" alt="Form">
                         <h5 class="contact-title">Via Form</h5>
                     </button>
