--- a/contact/index.html
+++ b/contact/index.html
@@ -98,7 +98,7 @@
                         <img class="contact-img" src="/images/email-icon.png" alt="Email">
                         <h5 class="contact-title" id="email">Via Email</h5>
                     </button>
-                    <button class="contact-option" onclick="window.open('discord.gg/ampXhzA', '_blank')">
+                    <button class="contact-option" onclick="window.open('https:\/\/discord.gg/ampXhzA', '_blank')">
                         <img class="contact-img" src="/images/discord.png" alt="Discord">
                         <h5 class="contact-title">Via Discord</h5>
                     </button>
