--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="/images/icon.png" rel="icon">
 </head>
 
-<body style="background-image: url('/images/bg.jpg');">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
@@ -68,6 +68,10 @@
             </div>
         </div>
     </nav>
+    
+    <div style="background-image: url('/images/bg.jpg');">
+
+    </div>
 
 
 </body>
