--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
         </div>
     </nav>
-    
-    <div style="background-image: url('/images/bg.jpg');">
+
+    <div class="main-bg">
 
     </div>
 
