--- a/contact/index.html
+++ b/contact/index.html
@@ -13,7 +13,7 @@
         <!-- Jquery (3.6.0)-->
         <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body class="bg-primary">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
