--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </nav>
 
     <!-- white box container -->
-    <div class="grid-box-container">
+    <div class="grid-box-container center-hv">
         <div class="container">
             <div class="row">
               <div class="col">
