--- a/index.html
+++ b/index.html
@@ -73,22 +73,21 @@
     <div class="grid-box-container center-hv">
         <div class="container">
             <div class="row">
-              <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 24rem;">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
-                      <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
-                    </div>
                   </div>
               </div>
-              <div class="col">
-                Column
-              </div>
-              <div class="col">
-                Column
+            </div>
+            <div class="row">
+                <div class="card" style="width: 24rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="card-link">Card link</a>
+                  </div>
               </div>
             </div>
           </div>
