--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- white box container -->
     <div class="grid-box-container center-hv">
         <div class="container">
-            <div class="row">
+            <div class="row space-5">
                 <div class="card" style="width: 24rem;">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
@@ -81,7 +81,7 @@
                   </div>
               </div>
             </div>
-            <div class="row">
+            <div class="row space-5">
                 <div class="card" style="width: 24rem;">
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
