--- a/index.html
+++ b/index.html
@@ -73,11 +73,10 @@
     <div class="grid-box-container center-hv">
         <div class="container">
             <div class="row space-5">
-                <div class="card" style="width: 24rem;">
+                <div class="card dark-elem" style="width: 24rem;">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
+                      <p class="card-text">All our recovery packages, prices and deals in one spot.</p>
+                      <a href="store" class="card-link">Store</a>
                   </div>
               </div>
             </div>
