--- a/index.html
+++ b/index.html
@@ -34,17 +34,14 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact">Contact Us</a>
-                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
+                            Shortcut
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li>
-                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">some recovery pkg</a>
                             </li>
                             <li>
                                 <a class="dropdown-item" href="#">Another action</a>
@@ -56,6 +53,12 @@
                                 <a class="dropdown-item" href="#">Something else here</a>
                             </li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/store/checkout">Checkout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -76,7 +79,9 @@
                 <div class="card dark-elem" style="width: 24rem;">
                     <div class="card-body">
                       <p class="card-text">All our recovery packages, prices and deals in one spot.</p>
-                      <a href="store" class="card-link">Store</a>
+                      <a href="/store" class="card-link">
+                          <button class="btn btn-primary">Shop</button>
+                        </a>
                   </div>
               </div>
             </div>
