--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a class="nav-link" href="/store/checkout">Checkout</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact">Contact Us</a>
+                        <a class="nav-link" href="/contact">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -79,7 +79,7 @@
                 <div class="card dark-elem" style="width: 24rem;">
                     <div class="card-body">
                       <p class="card-text">All our recovery packages, prices and deals in one spot.</p>
-                      <a href="/store" class="card-link">
+                      <a href="/store" class="card-link center">
                           <button class="btn btn-primary">Shop</button>
                         </a>
                   </div>
