--- a/index.html
+++ b/index.html
@@ -79,18 +79,17 @@
                 <div class="card dark-elem" style="width: 24rem;">
                     <div class="card-body">
                       <p class="card-text">All our recovery packages, prices and deals in one spot.</p>
-                      <a href="/store" class="card-link center">
+                      <a href="/store" class="card-link">
                           <button class="btn btn-primary">Shop</button>
                         </a>
                   </div>
               </div>
             </div>
             <div class="row space-5">
-                <div class="card" style="width: 24rem;">
+                <div class="card dark-elem" style="width: 24rem;">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="card-link">Card link</a>
+                      <p class="card-text">Speak with ERG. Have questions about what we do with your info or the recovery process or anyother questions?<br>Download discord and speak with ERG or email us.</p>
+                      <a href="/contact" class="card-link">Contact Me</a>
                   </div>
               </div>
             </div>
