--- a/contact/index.html
+++ b/contact/index.html
@@ -3,9 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="ERGs Recoveries" />
+        <meta property="og:description"
+            content="Official Grand Theft Auto V Recovery Service. Our service has the most fast, trustworthy and cheap recovery packages. Our menus don't get banned and your info is never saved." />
+        <meta property="og:url" content="https://cheapgta.com" />
+        <meta property="og:image" content="/images/icon.png" />
         <title>GTA 5 Recovery Service</title>
-        <link href="/css/custom.min.css" rel="stylesheet">
-        <!-- Bootstrap 5 custom sass file (compiled)-->
+    
+    
+        <link href="/css/custom.min.css" rel="stylesheet"> <!-- Bootstrap 5 custom sass file (compiled)-->
         <link href="/css/stylesheet.css" rel="stylesheet">
         <link href="/css/specific.css" rel="stylesheet">
         <link href="/images/icon.png" rel="icon">
