--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="website">
     <meta property="og:title" content="ERGs Recoveries" />
-    <meta property="og:description" content="Official Grand Theft Auto V Recovery Service. Our service has the most fast, trustworthy and cheap recovery packages. Our menus don't get banned and your info is never saved." />
+    <meta property="og:description"
+        content="Official Grand Theft Auto V Recovery Service. Our service has the most fast, trustworthy and cheap recovery packages. Our menus don't get banned and your info is never saved." />
     <meta property="og:url" content="https://cheapgta.com" />
     <meta property="og:image" content="/images/icon.png" />
     <title>GTA 5 Recovery Service</title>
@@ -78,24 +79,37 @@
             <div class="row space-5">
                 <div class="card dark-elem" style="width: 24rem;">
                     <div class="card-body">
-                      <p class="card-text">All our recovery packages, prices and deals in one spot.</p>
-                      <a href="/store" class="card-link">
-                          <button class="btn btn-primary">Shop</button>
+                        <p class="card-text">All our recovery packages, prices and deals in one spot.</p>
+                        <a href="/store" class="card-link">
+                            <button class="btn btn-primary">Shop</button>
                         </a>
-                  </div>
-              </div>
+                    </div>
+                </div>
             </div>
             <div class="row space-5">
                 <div class="card dark-elem" style="width: 24rem;">
                     <div class="card-body">
-                      <p class="card-text">Speak with ERG. Have questions about what we do with your info or the recovery process or anyother questions?<br>Download discord and speak with ERG or email us.</p>
-                      <a href="/contact" class="card-link">Contact Me</a>
-                  </div>
-              </div>
+                        <p class="card-text">Speak with ERG. Have questions about what we do with your info, recovery
+                            process or any other questions?<br>Download discord and speak with ERG or email us.</p>
+                        <a href="/contact" class="card-link">
+                        <buton class="btn btn-primary">Speak to Me</buton>
+                        </a>
+                    </div>
+                </div>
             </div>
-          </div>
+            <div class="row space-5">
+                <div class="card dark-elem" style="width: 24rem;">
+                    <div class="card-body">
+                        <p class="card-text">Our services have many limitations so you must read our pricacy and policy along with our disclaimer.</p>
+                        <a href="/legal" class="card-link">
+                        <button class="btn btn-primary">Privacy & Policy</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-        
+
     </div>
 
 
