--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </nav>
 
     <!-- white box container -->
-    <div class="grid-box-container center-hv">
+    <div class="grid-box-container center-hv" style="margin-top: 10px;">
         <div class="container">
             <div class="row space-5">
                 <div class="card dark-elem" style="width: 24rem;">
