--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="card dark-elem" style="width: 24rem;">
                     <div class="card-body">
                         <p class="card-text">Speak with ERG. Have questions about what we do with your info, recovery
-                            process or any other questions?<br>Download discord and speak with ERG or email us.</p>
+                            process or a custom recovery package?<br>Download discord and speak with ERG or email us.</p>
                         <a href="/contact" class="card-link">
                         <buton class="btn btn-primary">Speak to Me</buton>
                         </a>
