--- a/store/index.html
+++ b/store/index.html
@@ -126,7 +126,8 @@
                     <div class="col">
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
-                                <h5 style="text-align: center;">Recovery Package</h5>
+                                <h6 style="text-align: center;">recovery pkg name</h6>
+                                <h3>$5</h3>
                                 <p class="card-text">Includes</p>
                             </div>
                             <ul class="list-group list-group-flush">
