--- a/store/index.html
+++ b/store/index.html
@@ -117,7 +117,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="bg-primary">
             <div class="container">
                 <h3 style="text-align: center;">Recovery Packages</h3>
                 <div
