--- a/store/index.html
+++ b/store/index.html
@@ -118,7 +118,7 @@
         </div>
 
         <div class="bg-primary">
-            <div class="container">
+            <div class="container" style="margin: 1rem">
                 <h3 style="text-align: center;">Recovery Packages</h3>
                 <div
                     class="row">
