--- a/store/index.html
+++ b/store/index.html
@@ -117,8 +117,8 @@
             </div>
         </div>
 
-        <div class="bg-primary">
-            <div class="container" style="margin-top: 1rem; margin-bottom: 1rem;">
+        <div class="bg-primary" style="padding-top: 1em; padding-bottom: 1em;">
+            <div class="container">
                 <h3 style="text-align: center;">Recovery Packages</h3>
                 <div
                     class="row">
