--- a/store/index.html
+++ b/store/index.html
@@ -117,7 +117,7 @@
             </div>
         </div>
 
-        <div class="bg-primary" style="padding-top: 1em; padding-bottom: 1em;">
+        <div class="bg-primary" style="padding-bottom: 1em;">
             <div class="container">
                 <h3 style="text-align: center;">Recovery Packages</h3>
                 <div
