--- a/store/index.html
+++ b/store/index.html
@@ -127,7 +127,7 @@
                         <div class="card shop-item" style="width: 18rem;">
                             <div class="card-body">
                                 <h6 style="text-align: center;">recovery pkg name</h6>
-                                <h3>$5</h3>
+                                <h3>$price</h3>
                                 <p class="card-text">Includes</p>
                             </div>
                             <ul class="list-group list-group-flush">
