--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!-- white box container -->
     <div class="grid-box-container center-hv" style="margin-top: 5em">
-        <div class="container">
+        <div class="container" style="margin-top: 0;">
             <div class="row space-5">
                 <div class="card dark-elem" style="width: 24rem;">
                     <div class="card-body">
